Fix Chats on mobile

--- a/app/styles/chats.scss
+++ b/app/styles/chats.scss
@@ -365,6 +365,7 @@
       .chat-box {
         border-radius: 0;
         border: 2px solid var(--foreground-color);
+        margin-bottom: 51px;
 
         &__actions {
           padding: 0;
